--- a/index.css
+++ b/index.css
@@ -4,10 +4,15 @@
   height: 51px;
   display: flex;
   flex: auto;
+  background-color: gray;
 }
 
 #container {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+}
+
+.black{
+  background-color: black;
 }
