--- a/index.css
+++ b/index.css
@@ -1,23 +1,28 @@
 .divs {
-  width: 51px;
-  height: 51px;
+  display: flex;
   background-color: gray;
+  flex: 1 1 auto;
+  min-height: 10px;
+  min-width: 10px;
+  max-height: 150px;
+
+  border: 0px;
+  margin: 0px;
 }
 
 #container {
   display: flex;
   flex-wrap: wrap;
-  gap: 3px;
+  gap: 1px;
   width: 960px;
-  height: 450 px;
-  margin:auto;
-  
+  height: 450px;
+  margin: auto;
 }
 
-.black{
+.black {
   background-color: black;
 }
 
-body{
-  display:flex;
+body {
+  display: flex;
 }
